--- a/index.html
+++ b/index.html
@@ -2,159 +2,134 @@
 <html lang="lt">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seimo narių balsavimo statistika</title>
 
     <!-- DataTables CSS -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+    <link rel="stylesheet"
+          href="https://cdn.datatables.net/1.13.8/css/jquery.dataTables.min.css">
 
     <style>
         body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-            margin: 20px;
-            background: #ffffff;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+            sans-serif;
+            max-width: 1400px;
+            margin: 0 auto;
+            padding: 20px;
         }
 
         h1 {
-            margin-bottom: 0.3rem;
-            font-size: 2.2rem;
+            margin-bottom: 0.2rem;
         }
 
-        .subtitle {
-            margin-top: 0;
-            margin-bottom: 0.5rem;
-            color: #444;
-            font-size: 0.95rem;
+        .periodas {
+            margin-bottom: 1rem;
+            color: #555;
         }
 
-        .hint {
-            margin-top: 0;
-            margin-bottom: 1.2rem;
-            font-size: 0.95rem;
-            color: #333;
-            background: #f2f2f2;
-            padding: 12px 14px;
+        .tipas-blokas {
+            background: #f5f5f5;
             border-radius: 6px;
-            display: inline-block;
-            max-width: 1200px;
-            line-height: 1.4;
+            padding: 10px 14px;
+            margin-bottom: 18px;
+            font-size: 14px;
         }
 
-        /* Lentelės dizainas */
-        #balsavimai {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        #balsavimai thead th {
-            white-space: nowrap;
-            cursor: pointer;
-            position: relative;
-            padding-right: 16px;
-            font-size: 15px;
-        }
-
-        /* 1 stulpelis (Eil. Nr.) – siauras */
-        #balsavimai th:nth-child(1),
-        #balsavimai td:nth-child(1) {
-            width: 40px !important;
-            max-width: 40px !important;
-            min-width: 40px !important;
-            text-align: center !important;
-        }
-
-        /* 2 stulpelis – Seimo narys (platus) */
-        #balsavimai th:nth-child(2),
-        #balsavimai td:nth-child(2) {
-            width: 260px !important;
-            min-width: 260px !important;
-            text-align: left;
+        /* Pirma kolona – siaura, centruota */
+        table.dataTable tbody td:first-child,
+        table.dataTable thead th:first-child {
+            text-align: center;
         }
     </style>
 </head>
 <body>
 
 <h1>Seimo narių balsavimo statistika</h1>
-<p class="subtitle">Laikotarpis: 2024-11-14 – 2025-11-14</p>
-
-<div class="hint">
-    Patarimas: norėdami patogiai peržiūrėti duomenis, spauskite ant stulpelių pavadinimų 
-    („Nedalyvavo“, „Prieš“, „Už“, „Susilaikė“, „Registravosi“, „Už A“, „Už B“). 
-    Lentelė iškart bus surikiuota pagal pasirinktą pjūvį – taip lengviau matyti, kas daugiausiai 
-    nedalyvavo, balsavo prieš ar susilaikė.
+<div class="periodas">
+    Laikotarpis: 2024-11-14 – 2025-11-14
 </div>
 
-<table id="balsavimai" class="display">
+<div class="tipas-blokas">
+    Patarimas: norėdami patogiai peržiūrėti duomenis, spauskite ant stulpelių
+    pavadinimų („Nedalyvavo“, „Prieš“, „Už“, „Susilaikė“, „Registravosi“,
+    „Už A“, „Už B“). Lentelė iškart bus surikiuota pagal pasirinktą pjūvį –
+    taip lengviau matyti, kas daugiausiai nedalyvavo, balsavo prieš ar susilaikė.
+</div>
+
+<table id="balsavimai" class="display" style="width:100%">
     <thead>
-        <tr>
-            <th>Eil. Nr.</th>
-            <th>Seimo narys</th>
-            <th>Nedalyvavo</th>
-            <th>Prieš</th>
-            <th>Už</th>
-            <th>Susilaikė</th>
-            <th>Registravosi</th>
-            <th>Už A</th>
-            <th>Už B</th>
-        </tr>
+    <tr>
+        <th>Eil. Nr.</th>
+        <th>Seimo narys</th>
+        <th>Nedalyvavo</th>
+        <th>Prieš</th>
+        <th>Už</th>
+        <th>Susilaikė</th>
+        <th>Registravosi</th>
+        <th>Už A</th>
+        <th>Už B</th>
+    </tr>
     </thead>
-    <tbody></tbody>
+    <tbody>
+    <!-- Užpildys JavaScript -->
+    </tbody>
 </table>
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
 <!-- DataTables JS -->
-<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.8/js/jquery.dataTables.min.js"></script>
 
-<!-- PapaParse CSV loader -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+<!-- PapaParse CSV nuskaitymui -->
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
 <script>
-$(document).ready(function () {
+    $(document).ready(function () {
+        Papa.parse("metu_balsavimas1.csv", {
+            download: true,
+            header: true,
+            skipEmptyLines: true,
+            delimiter: ";",          // svarbu LT CSV (kabliataskis)
+            complete: function (results) {
+                var data = results.data;
 
-    Papa.parse("metu_balsavimas1.csv", {
-        download: true,
-        header: true,
-        complete: function (results) {
-
-            let data = results.data;
-
-            // išrūšiuojame pagal pavardę (2 stulpelis), kaip pirminę tvarką
-            data.sort((a, b) => (a["Seimo narys"] > b["Seimo narys"]) ? 1 : -1);
-
-            let tableData = [];
-
-            data.forEach((row, index) => {
-                tableData.push([
-                    index + 1,                    // stabili numeracija 1-141
-                    row["Seimo narys"],
-                    row["Nedalyvavo"],
-                    row["Prieš"],
-                    row["Už"],
-                    row["Susilaikė"],
-                    row["Registravosi"],
-                    row["Už A"],
-                    row["Už B"]
-                ]);
-            });
-
-            $("#balsavimai").DataTable({
-                data: tableData,
-                pageLength: 25,
-                lengthMenu: [25, 50, 100, 141],
-                order: [],   
-                language: {
-                    search: "Ieškoti:",
-                    lengthMenu: "Rodyti _MENU_ įrašus"
-                },
-                columnDefs: [
-                    { orderable: false, targets: 0 } // Eil. Nr. nerūšiuojamas
-                ]
-            });
-        }
+                $('#balsavimai').DataTable({
+                    data: data,
+                    autoWidth: false,  // leis mums valdyti plotį
+                    columns: [
+                        {
+                            // Eil. Nr. – generuojamas numeris
+                            data: null,
+                            render: function (data, type, row, meta) {
+                                return meta.row + 1;
+                            },
+                            orderable: false,
+                            searchable: false
+                        },
+                        {data: "Seimo narys"},
+                        {data: "Nedalyvavo"},
+                        {data: "Prieš"},
+                        {data: "Už"},
+                        {data: "Susilaikė"},
+                        {data: "Registravosi"},
+                        {data: "Už A"},
+                        {data: "Už B"}
+                    ],
+                    order: [[1, "asc"]],  // pradinis rikiavimas pagal pavardes
+                    pageLength: 25,
+                    language: {
+                        url: "https://cdn.datatables.net/plug-ins/1.13.6/i18n/lt-LT.json"
+                    },
+                    columnDefs: [
+                        // 1 kolona – siaura
+                        {targets: 0, width: "55px"},
+                        // 2 kolona – platesnė (vardas + pavardė)
+                        {targets: 1, width: "260px"}
+                    ]
+                });
+            }
+        });
     });
-});
 </script>
 
 </body>
