--- a/index.html
+++ b/index.html
@@ -1,159 +1,176 @@
 <!DOCTYPE html>
 <html lang="lt">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Seimo narių balsavimo statistika</title>
 
-    <!-- DataTables CSS -->
-    <link
-        rel="stylesheet"
-        href="https://cdn.datatables.net/1.13.8/css/jquery.dataTables.min.css"
-    />
+    <!-- DataTables (jQuery versija) CSS -->
+    <link rel="stylesheet"
+          href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css"/>
 
     <style>
         body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-                sans-serif;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
             margin: 20px;
+            background: #ffffff;
         }
 
         h1 {
-            font-size: 32px;
-            margin-bottom: 4px;
+            margin-bottom: 0.3rem;
+            font-size: 2.2rem;
         }
 
-        .period {
-            margin-bottom: 18px;
-            color: #555;
+        .subtitle {
+            margin-top: 0;
+            margin-bottom: 0.5rem;
+            color: #444;
+            font-size: 0.95rem;
         }
 
         .hint {
-            background: #f5f5f5;
-            border-left: 4px solid #007bff;
-            padding: 10px 14px;
-            margin-bottom: 18px;
-            font-size: 14px;
+            margin-top: 0;
+            margin-bottom: 1rem;
+            font-size: 0.95rem;
             color: #333;
+            background: #f2f2f2;
+            padding: 10px 14px;
+            border-radius: 6px;
+            display: inline-block;
+            max-width: 1100px;
         }
 
-        table.dataTable thead th {
-            font-weight: 600;
+        /* Stulpelių antraštės – rodo, kad galima spausti */
+        #balsavimai thead th {
+            white-space: nowrap;
+            cursor: pointer;
+            position: relative;
+            padding-right: 16px;
         }
 
-        /* 1 stulpelis – siauras, tik eilės numeriui */
-        th.col-eilnr,
-        td.col-eilnr {
-            width: 55px;
+        #balsavimai {
+            width: 100%;
+        }
+
+        /* 👇 PIRMAS STULPELIS (EIL. NR.) – SIAURESIS */
+        #balsavimai td:nth-child(1),
+        #balsavimai th:nth-child(1) {
+            width: 50px !important;
             text-align: center;
         }
 
-        /* 2 stulpelis – platesnis, kad tilptų vardas ir pavardė */
-        th.col-vardas,
-        td.col-vardas {
-            width: 260px;
+        /* 👇 ANTRAS STULPELIS (SEIMO NARYS) – PLATESNIS */
+        #balsavimai td:nth-child(2),
+        #balsavimai th:nth-child(2) {
+            width: 260px !important;
         }
 
-        table.dataTable tbody td {
-            vertical-align: middle;
-        }
     </style>
 </head>
 <body>
-    <h1>Seimo narių balsavimo statistika</h1>
-    <div class="period">Laikotarpis: 2024-11-14 – 2025-11-14</div>
 
-    <div class="hint">
-        Patarimas: norėdami patogiai peržiūrėti duomenis, spauskite ant stulpelių
-        pavadinimų („Nedalyvavo“, „Prieš“, „Už“, „Susilaikė“, „Registravosi“, „Už A“, „Už B“).
-        Lentelė iškart bus surikiuota pagal pasirinktą pjūvį – taip lengviau matyti,
-        kas daugiausiai nedalyvavo, balsavo prieš ar susilaikė.
-    </div>
+<h1>Seimo narių balsavimo statistika</h1>
+<p class="subtitle">Laikotarpis: 2024-11-14 – 2025-11-14</p>
 
-    <table id="balsavimai" class="display" style="width: 100%">
-        <thead>
-            <tr>
-                <th class="col-eilnr">Eil. Nr.</th>
-                <th class="col-vardas">Seimo narys</th>
-                <th>Nedalyvavo</th>
-                <th>Prieš</th>
-                <th>Už</th>
-                <th>Susilaikė</th>
-                <th>Registravosi</th>
-                <th>Už A</th>
-                <th>Už B</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+<p class="hint">
+    Patarimas: norėdami patogiai peržiūrėti duomenis, spauskite ant stulpelių
+    pavadinimų („Nedalyvavo“, „Prieš“, „Už“, „Susilaikė“, „Registravosi“, „Už A“, „Už B“).
+    Lentelė iškart bus surikiuota pagal pasirinktą pjūvį – taip lengviau matyti, kas
+    daugiausiai nedalyvavo, balsavo prieš ar susilaikė.
+</p>
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<table id="balsavimai" class="display">
+    <thead>
+    <tr>
+        <th>Eil. Nr.</th>
+        <th>Seimo narys</th>
+        <th>Nedalyvavo</th>
+        <th>Prieš</th>
+        <th>Už</th>
+        <th>Susilaikė</th>
+        <th>Registravosi</th>
+        <th>Už A</th>
+        <th>Už B</th>
+    </tr>
+    </thead>
+    <tbody></tbody>
+</table>
 
-    <!-- DataTables JS -->
-    <script src="https://cdn.datatables.net/1.13.8/js/jquery.dataTables.min.js"></script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <!-- PapaParse CSV parser -->
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+<!-- DataTables JS (jQuery) -->
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 
-    <script>
-        // Nuskaitome CSV failą ir užpildome lentelę
+<!-- PapaParse CSV parsavimui -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+
         Papa.parse("metu_balsavimas1.csv", {
             download: true,
-            header: false,
+            delimiter: ";",
             skipEmptyLines: true,
-            delimiter: ";", // Excel LT dažniausiai eksportuoja su ';'
             complete: function (results) {
-                // Pirmoje eilutėje – antraštės, jų nereikia
-                const dataRows = results.data.slice(1);
 
-                $("#balsavimai").DataTable({
-                    data: dataRows,
-                    autoWidth: false,
+                var rows = results.data;
+                var data = [];
+
+                // Tikri duomenys prasideda nuo 4 eilutės
+                for (var i = 3; i < rows.length; i++) {
+                    var r = rows[i];
+                    if (!r || r.length < 9) continue;
+
+                    data.push([
+                        r[1],                          // Seimo narys
+                        parseInt(r[2] || "0", 10),
+                        parseInt(r[3] || "0", 10),
+                        parseInt(r[4] || "0", 10),
+                        parseInt(r[5] || "0", 10),
+                        parseInt(r[6] || "0", 10),
+                        parseInt(r[7] || "0", 10),
+                        parseInt(r[8] || "0", 10)
+                    ]);
+                }
+
+                var table = $('#balsavimai').DataTable({
+                    data: data,
                     columns: [
                         {
-                            // Eil. Nr. – stabilus numeris nuo 1 iki 141,
-                            // nepriklausomai nuo rikiavimo / filtravimo
                             data: null,
-                            className: "col-eilnr",
-                            render: function (data, type, row, meta) {
-                                return meta.row + 1;
-                            },
-                            orderable: false,
                             searchable: false,
+                            orderable: false
                         },
-                        {
-                            // Seimo narys – CSV stulpelis Nr. 2 (indeksas 2)
-                            data: 2,
-                            className: "col-vardas",
-                        },
-                        { data: 3 }, // Nedalyvavo
-                        { data: 4 }, // Prieš
-                        { data: 5 }, // Už
-                        { data: 6 }, // Susilaikė
-                        { data: 7 }, // Registravosi
-                        { data: 8 }, // Už A
-                        { data: 9 }, // Už B
+                        {data: 0},
+                        {data: 1},
+                        {data: 2},
+                        {data: 3},
+                        {data: 4},
+                        {data: 5},
+                        {data: 6},
+                        {data: 7}
                     ],
-                    order: [[1, "asc"]], // pradinis rikiavimas pagal pavardę (abėcėlė)
+                    order: [[1, "asc"]],
                     pageLength: 25,
+                    lengthMenu: [[10, 25, 50, 141, -1], [10, 25, 50, 141, "Visi"]],
                     language: {
-                        decimal: ",",
-                        thousands: " ",
-                        search: "Ieškoti:",
-                        lengthMenu: "Rodyti _MENU_ įrašus",
-                        info: "Rodomi _START_–_END_ iš _TOTAL_ įrašų",
-                        infoEmpty: "Įrašų nėra",
-                        zeroRecords: "Nerasta atitinkančių įrašų",
-                        paginate: {
-                            first: "Pirmas",
-                            last: "Paskutinis",
-                            next: "Kitas",
-                            previous: "Ankstesnis",
-                        },
-                    },
+                        url: "https://cdn.datatables.net/plug-ins/1.13.6/i18n/lt.json"
+                    }
                 });
-            },
+
+                table.on('draw.dt', function () {
+                    var info = table.page.info();
+                    table.column(0, {page: 'current'}).nodes().each(function (cell, i) {
+                        cell.innerHTML = info.start + i + 1;
+                    });
+                });
+
+                table.draw();
+            }
         });
-    </script>
+
+    });
+</script>
+
 </body>
 </html>
